--- a/vignettes/BlissIntro.Rmd
+++ b/vignettes/BlissIntro.Rmd
@@ -46,7 +46,7 @@ To obtain data, several characteristics must be specified to simulate the data, 
                b_inf=c(0),             # Give the beginning of the observation's domain of the functions ...
                b_sup=c(1))             # ... and the end.
 
-  data <- sim_multiple(param) # Simulate the data
+#  data <- sim_multiple(param) # Simulate the data
 ```
 
 ## Apply the Bliss method
@@ -68,15 +68,15 @@ This main function requires a **param** list containing
 * and **phi$\_$l**, an argument specifying the *a priori* distribution of (only the **Gamma** option is considered in this vignette).
 
 ```{r ,eval=TRUE, include = TRUE}
-  param <- list(               # define the required values of the Bliss method.
-             iter=1e3,         # The number of iteration of the main numerical algorithm of Bliss.
-             burnin=2e2,                 
-             K=c(3),           # The number of intervals of the beta
-             grids=data$grids, # The grid of the time observations 
-             prior_beta="Ridge_Zellner", 
-             phi_l=list("Gamma"))
-
-  res_Bliss_mult <- Bliss_multiple(data,param,density=TRUE)
+  # param <- list(               # define the required values of the Bliss method.
+  #            iter=1e3,         # The number of iteration of the main numerical algorithm of Bliss.
+  #            burnin=2e2,                 
+  #            K=c(3),           # The number of intervals of the beta
+  #            grids=data$grids, # The grid of the time observations 
+  #            prior_beta="Ridge_Zellner", 
+  #            phi_l=list("Gamma"))
+  # 
+  # res_Bliss_mult <- Bliss_multiple(data,param,density=TRUE)
 
 ```
 
@@ -85,23 +85,23 @@ This main function requires a **param** list containing
 We give here the code to obtain representations of the *a posteriori* distribution. First, we give the code to obtain a posteriori probabilities $\alpha(t|D)$, relative to the support. Then, the *image$\_$Bliss* function is used to represent the subsequent distribution of the coefficient function.
 
 ```{r ,eval=TRUE, include = TRUE,fig.height=5,fig.width=7}
-  for(q in 1:Q){
-    ylim <- range(c(res_Bliss_mult$posterior_density_estimate[[q]]$res.kde2d$y,
-                  data$beta[[q]]))
-    ylim <- ylim +  (ylim[2] - ylim[1])/20 * c(-1,1)
-    param$ylim <- ylim
-  
-    image_Bliss(res_Bliss_mult$posterior_density_estimate[[q]],param)
-    # the Bliss estimate
-    lines_step_function(res_Bliss_mult$param$grids2[[q]],
-                        res_Bliss_mult$Bliss_estimate[[q]],lwd=2,bound=F) 
-    # the posterior expection of beta(t)
-    lines_step_function(res_Bliss_mult$param$grids2[[q]],
-                        res_Bliss_mult$res.Simulated_Annealing[[q]]$posterior_expe,
-                        lty=2,bound=T)
-    # plot the true coefficient function
-    lines(data$grids[[q]],data$beta[[q]],col=3)
-  }
+  # for(q in 1:Q){
+  #   ylim <- range(c(res_Bliss_mult$posterior_density_estimate[[q]]$res.kde2d$y,
+  #                 data$beta[[q]]))
+  #   ylim <- ylim +  (ylim[2] - ylim[1])/20 * c(-1,1)
+  #   param$ylim <- ylim
+  # 
+  #   image_Bliss(res_Bliss_mult$posterior_density_estimate[[q]],param)
+  #   # the Bliss estimate
+  #   lines_step_function(res_Bliss_mult$param$grids2[[q]],
+  #                       res_Bliss_mult$Bliss_estimate[[q]],lwd=2,bound=F) 
+  #   # the posterior expection of beta(t)
+  #   lines_step_function(res_Bliss_mult$param$grids2[[q]],
+  #                       res_Bliss_mult$res.Simulated_Annealing[[q]]$posterior_expe,
+  #                       lty=2,bound=T)
+  #   # plot the true coefficient function
+  #   lines(data$grids[[q]],data$beta[[q]],col=3)
+  # }
 
 ```
 
@@ -114,38 +114,38 @@ To avoid execution lengths, this section is not executed. Please, give it a try.
 ## Simulate the dataset
 
 ```{r ,eval=FALSE, include = TRUE}
-  Q <- 2
-  param <- list(n=50,p=c(15,12),beta_types=c("simple","smooth"),
-                b_inf=c(0,0),b_sup=c(1,1))
-  data <- sim_multiple(param)
+  # Q <- 2
+  # param <- list(n=50,p=c(15,12),beta_types=c("simple","smooth"),
+  #               b_inf=c(0,0),b_sup=c(1,1))
+  # data <- sim_multiple(param)
 ```
 
 ## Apply the Bliss method
 ```{r ,eval=FALSE, include = TRUE}
-  param <- list(iter=1e3,burnin=2e2,K=c(3,3),grids=data$grids,
-                prior_beta="Ridge_Zellner",phi_l=list("Gamma","Gamma"))
-  res_Bliss_mult <- Bliss_multiple(data,param,density=TRUE)
+  # param <- list(iter=1e3,burnin=2e2,K=c(3,3),grids=data$grids,
+  #               prior_beta="Ridge_Zellner",phi_l=list("Gamma","Gamma"))
+  # res_Bliss_mult <- Bliss_multiple(data,param,density=TRUE)
 ```
 
 ## Plot the result
 ```{r ,eval=FALSE, include = TRUE,fig.height=5,fig.width=7}
-  for(q in 1:Q){
-    ylim <- range(c(res_Bliss_mult$posterior_density_estimate[[q]]$res.kde2d$y,
-                    data$beta[[q]]))
-    ylim <- ylim +  (ylim[2] - ylim[1])/20 * c(-1,1)
-    param$ylim <- ylim
-  
-    image_Bliss(res_Bliss_mult$posterior_density_estimate[[q]],param)
-    # the Bliss estimate
-    lines_step_function(res_Bliss_mult$param$grids2[[q]],
-                        res_Bliss_mult$Bliss_estimate[[q]],lwd=2,bound=F) 
-    # the posterior expection of beta(t)
-    lines_step_function(res_Bliss_mult$param$grids2[[q]],
-                        res_Bliss_mult$res.Simulated_Annealing[[q]]$posterior_expe,
-                        lty=2,bound=T)
-    # plot the true coefficient function
-    lines(data$grids[[q]],data$beta[[q]],col=3)
-  }
+  # for(q in 1:Q){
+  #   ylim <- range(c(res_Bliss_mult$posterior_density_estimate[[q]]$res.kde2d$y,
+  #                   data$beta[[q]]))
+  #   ylim <- ylim +  (ylim[2] - ylim[1])/20 * c(-1,1)
+  #   param$ylim <- ylim
+  # 
+  #   image_Bliss(res_Bliss_mult$posterior_density_estimate[[q]],param)
+  #   # the Bliss estimate
+  #   lines_step_function(res_Bliss_mult$param$grids2[[q]],
+  #                       res_Bliss_mult$Bliss_estimate[[q]],lwd=2,bound=F) 
+  #   # the posterior expection of beta(t)
+  #   lines_step_function(res_Bliss_mult$param$grids2[[q]],
+  #                       res_Bliss_mult$res.Simulated_Annealing[[q]]$posterior_expe,
+  #                       lty=2,bound=T)
+  #   # plot the true coefficient function
+  #   lines(data$grids[[q]],data$beta[[q]],col=3)
+  # }
 ```
 
 # Session informations
