Upd vignette and some examples

--- a/doc/BlissIntro.Rmd
+++ b/doc/BlissIntro.Rmd
@@ -38,13 +38,12 @@ To obtain data, several characteristics must be specified to simulate the data, 
 
 
 ```{r ,eval=TRUE,include = TRUE}
-  param <- list(                        # define the "param" to simulate data 
+  param <- list(                        # define the "param" to simulate data
                 Q=1,                    # the number of functional covariate
-                n=25,                   # n is the sample size and p is the 
-                p=c(15),                # number of time observations of the curves
+                n=100,                  # n is the sample size and p is the
+                p=c(50),                # number of time observations of the curves
                 beta_types=c("smooth"), # define the shape of the "true" coefficient function
-                b_inf=c(0),             # Give the beginning of the observation's domain of the functions ...
-                b_sup=c(1))             # ... and the end.
+                grids_lim=list(c(0,1))) # Give the beginning and the end of the observation's domain of the functions.
 
   data <- sim(param) # Simulate the data
 ```
@@ -70,11 +69,10 @@ This main function requires a **param** list containing
 ```{r ,eval=TRUE, include = TRUE}
   param <- list(               # define the required values of the Bliss method.
                 Q=1,                    # the number of functional covariate
-                n=25,                   # n is the sample size and p is the 
-                p=c(15),                # number of time observations of the curves
+                n=100,                  # n is the sample size and p is the
+                p=c(50),                # number of time observations of the curves
                 beta_types=c("smooth"), # define the shape of the "true" coefficient function
-                b_inf=c(0),             # Give the beginning of the observation's domain of the functions ...
-                b_sup=c(1),
+                grids_lim=list(c(0,1)),
                 iter=1e3,               # The number of iteration of the main numerical algorithm of Bliss.
                 burnin=2e2,                 
                 K=c(3),                 # The number of intervals of the beta
@@ -82,7 +80,7 @@ This main function requires a **param** list containing
                 prior_beta="Ridge_Zellner", 
                 phi_l=list("Gamma"))
    
-  res_bliss<-fit_Bliss(data=data,param=param)
+  res_bliss<-fit_Bliss(data=data,param=param,verbose=TRUE)
   
   # Structure of a Bliss object
   str(res_bliss)
@@ -93,7 +91,7 @@ This main function requires a **param** list containing
 We give here the code to obtain representations of the *a posteriori* distribution. First, we give the code to obtain a posteriori probabilities $\alpha(t|D)$, relative to the support. Then, the *image$\_$Bliss* function is used to represent the subsequent distribution of the coefficient function.
 
 ```{r ,eval=TRUE, include = TRUE,fig.height=5,fig.width=7}
-  param$cols <- rev(heat.colors(12))
+  param$cols <- rev(heat.colors(100))
   image_Bliss(res_bliss$beta_posterior_density,param,q=1)
   lines(res_bliss$data$grids[[1]],res_bliss$Bliss_estimate[[1]],type="s",lwd=2)
   lines(res_bliss$data$grids[[1]],res_bliss$data$betas[[1]],col=2,lwd=2,type="s")
@@ -128,23 +126,21 @@ To avoid execution lengths, this section is not executed. Please, give it a try.
 
 ## Plot the result
 ```{r ,eval=FALSE, include = TRUE,fig.height=5,fig.width=7}
-  # for(q in 1:Q){
-  #   ylim <- range(c(res_Bliss_mult$posterior_density_estimate[[q]]$res.kde2d$y,
-  #                   data$beta[[q]]))
-  #   ylim <- ylim +  (ylim[2] - ylim[1])/20 * c(-1,1)
-  #   param$ylim <- ylim
-  # 
-  #   image_Bliss(res_Bliss_mult$posterior_density_estimate[[q]],param)
-  #   # the Bliss estimate
-  #   lines_step_function(res_Bliss_mult$param$grids2[[q]],
-  #                       res_Bliss_mult$Bliss_estimate[[q]],lwd=2,bound=F) 
-  #   # the posterior expection of beta(t)
-  #   lines_step_function(res_Bliss_mult$param$grids2[[q]],
-  #                       res_Bliss_mult$res.Simulated_Annealing[[q]]$posterior_expe,
-  #                       lty=2,bound=T)
-  #   # plot the true coefficient function
-  #   lines(data$grids[[q]],data$beta[[q]],col=3)
-  # }
+  for(q in 1:Q){
+    ylim <- range(c(res_Bliss_mult$posterior_density_estimate[[q]]$res.kde2d$y,
+                    data$beta[[q]]))
+    ylim <- ylim +  (ylim[2] - ylim[1])/20 * c(-1,1)
+    param$ylim <- ylim
+
+    image_Bliss(res_bliss$beta_posterior_density,param,q=q)
+    # the Bliss estimate
+    lines(res_Bliss_mult$grids[[q]],res_Bliss_mult$Bliss_estimate[[q]],lwd=2,bound=F)
+    # the posterior expection of beta(t)
+    lines(res_Bliss_mult$grids[[q]],res_Bliss_mult$res.Simulated_Annealing[[q]]$posterior_expe,
+                        lty=2,bound=T)
+    # plot the true coefficient function
+    lines(data$grids[[q]],data$beta[[q]],col=3)
+  }
 ```
 
 # Session informations
