--- a/vignettes/BlissIntro.Rmd
+++ b/vignettes/BlissIntro.Rmd
@@ -67,18 +67,24 @@ This main function requires a **param** list containing
 * and **phi$\_$l**, an argument specifying the *a priori* distribution of (only the **Gamma** option is considered in this vignette).
 
 ```{r ,eval=TRUE, include = TRUE}
+  # param <- list(               # define the required values of the Bliss method.
+  #               Q=1,                    # the number of functional covariate
+  #               n=100,                  # n is the sample size and p is the
+  #               p=c(50),                # number of time observations of the curves
+  #               beta_types=c("smooth"), # define the shape of the "true" coefficient function
+  #               grids_lim=list(c(0,1)),
+  #               iter=1e3,               # The number of iteration of the main numerical algorithm of Bliss.
+  #               burnin=2e2,                 
+  #               K=c(3),                 # The number of intervals of the beta
+  #               grids=data$grids,       # The grid of the time observations 
+  #               prior_beta="Ridge_Zellner", 
+  #               phi_l=list("Gamma"))
+
   param <- list(               # define the required values of the Bliss method.
-                Q=1,                    # the number of functional covariate
-                n=100,                  # n is the sample size and p is the
-                p=c(50),                # number of time observations of the curves
-                beta_types=c("smooth"), # define the shape of the "true" coefficient function
-                grids_lim=list(c(0,1)),
                 iter=1e3,               # The number of iteration of the main numerical algorithm of Bliss.
-                burnin=2e2,                 
-                K=c(3),                 # The number of intervals of the beta
-                grids=data$grids,       # The grid of the time observations 
-                prior_beta="Ridge_Zellner", 
-                phi_l=list("Gamma"))
+                burnin=2e2,             # The number of burnin iteration for the Gibbs Sampler
+                K=c(3))                 # The number of intervals of the beta
+
    
   res_bliss<-fit_Bliss(data=data,param=param,verbose=TRUE)
   
@@ -91,6 +97,8 @@ This main function requires a **param** list containing
 We give here the code to obtain representations of the *a posteriori* distribution. First, we give the code to obtain a posteriori probabilities $\alpha(t|D)$, relative to the support. Then, the *image$\_$Bliss* function is used to represent the subsequent distribution of the coefficient function.
 
 ```{r ,eval=TRUE, include = TRUE,fig.height=5,fig.width=7}
+  param$ylim <- range(range(res_bliss$beta_posterior_density[[1]]$grid_beta_t),
+                      c(-5,5))
   param$cols <- rev(heat.colors(100))
   image_Bliss(res_bliss$beta_posterior_density,param,q=1)
   lines(res_bliss$data$grids[[1]],res_bliss$Bliss_estimate[[1]],type="s",lwd=2)
@@ -99,6 +107,8 @@ We give here the code to obtain representations of the *a posteriori* distributi
 
 
 ```{r ,eval=TRUE, include = TRUE,fig.height=5,fig.width=7}
+  ylim <- range(range(res_bliss$Bliss_estimate[[1]]),
+                range(res_bliss$Smooth_estimate[[1]]))
   plot_bliss(res_bliss$data$grids[[1]],
              res_bliss$Bliss_estimate[[1]],lwd=2)
   lines_bliss(res_bliss$data$grids[[1]],
@@ -112,20 +122,64 @@ To avoid execution lengths, this section is not executed. Please, give it a try.
 ## Simulate the dataset
 
 ```{r ,eval=FALSE, include = TRUE}
-  param <- list(Q=2,n=50,p=c(15,12),beta_types=c("simple","smooth"),
-               b_inf=c(0,0),b_sup=c(1,1),
-               iter=1e3,burnin=2e2,K=c(3,3),grids=data$grids,
-               prior_beta="Ridge_Zellner",phi_l=list("Gamma","Gamma"))
+   param <- list(Q=2,
+                 n=300,
+                 p=c(40,60),
+                 beta_shapes=c("simple","smooth"),
+                 grids_lim=list(c(0,1),c(0,2)))
+
+  # param <- list(Q=2,n=50,p=c(15,12),beta_types=c("simple","smooth"),
+  #              b_inf=c(0,0),b_sup=c(1,1),
+  #              iter=1e3,burnin=2e2,K=c(3,3),grids=data$grids,
+  #              prior_beta="Ridge_Zellner",phi_l=list("Gamma","Gamma"))
   data <- sim(param)
 ```
 
 ## Apply the Bliss method
 ```{r ,eval=FALSE, include = TRUE}
+   param <- list(            # define the required values of the Bliss method.
+     iter=1e3,               # The number of iteration of the main numerical algorithm of Bliss.
+     burnin=2e2,             # The number of burnin iteration for the Gibbs Sampler
+     K=c(3,3))               # The number of intervals of the beta
+
   res_Bliss_mult <- fit_Bliss(data=data,param=param)
 ```
 
 ## Plot the result
 ```{r ,eval=FALSE, include = TRUE,fig.height=5,fig.width=7}
+   q <- 1
+   param$ylim <- range(range(res_bliss$beta_posterior_density[[q]]$grid_beta_t),
+                       c(-5,5))
+   param$cols <- rev(heat.colors(100))
+   image_Bliss(res_bliss$beta_posterior_density,param,q=q)
+   lines(res_bliss$data$grids[[q]],res_bliss$Bliss_estimate[[q]],type="s",lwd=2)
+   lines(res_bliss$data$grids[[q]],res_bliss$data$betas[[q]],col=2,lwd=2,type="s")
+
+  ylim <- range(range(res_bliss$Bliss_estimate[[q]]),
+                 range(res_bliss$Smooth_estimate[[q]]))
+   plot_bliss(res_bliss$data$grids[[q]],
+              res_bliss$Bliss_estimate[[q]],lwd=2,ylim=ylim)
+   lines(res_bliss$data$grids[[q]],
+         res_bliss$Smooth_estimate[[q]],lty=2)
+
+
+   q <- 2
+   param$ylim <- range(range(res_bliss$beta_posterior_density[[q]]$grid_beta_t),
+                       c(-5,5))
+   param$cols <- rev(heat.colors(100))
+   image_Bliss(res_bliss$beta_posterior_density,param,q=q)
+   lines(res_bliss$data$grids[[q]],res_bliss$Bliss_estimate[[q]],type="s",lwd=2)
+   lines(res_bliss$data$grids[[q]],res_bliss$data$betas[[q]],col=2,lwd=2,type="l")
+   
+   ylim <- range(range(res_bliss$Bliss_estimate[[q]]),
+                 range(res_bliss$Smooth_estimate[[q]]))
+   plot_bliss(res_bliss$data$grids[[q]],
+              res_bliss$Bliss_estimate[[q]],lwd=2,ylim=ylim)
+   lines(res_bliss$data$grids[[q]],
+         res_bliss$Smooth_estimate[[q]],lty=2)
+
+
+
   for(q in 1:Q){
     ylim <- range(c(res_Bliss_mult$posterior_density_estimate[[q]]$res.kde2d$y,
                     data$beta[[q]]))
