--- a/vignettes/BlissIntro.Rmd
+++ b/vignettes/BlissIntro.Rmd
@@ -67,23 +67,10 @@ This main function requires a **param** list containing
 * and **phi$\_$l**, an argument specifying the *a priori* distribution of (only the **Gamma** option is considered in this vignette).
 
 ```{r ,eval=TRUE, include = TRUE}
-  # param <- list(               # define the required values of the Bliss method.
-  #               Q=1,                    # the number of functional covariate
-  #               n=100,                  # n is the sample size and p is the
-  #               p=c(50),                # number of time observations of the curves
-  #               beta_types=c("smooth"), # define the shape of the "true" coefficient function
-  #               grids_lim=list(c(0,1)),
-  #               iter=1e3,               # The number of iteration of the main numerical algorithm of Bliss.
-  #               burnin=2e2,                 
-  #               K=c(3),                 # The number of intervals of the beta
-  #               grids=data$grids,       # The grid of the time observations 
-  #               prior_beta="Ridge_Zellner", 
-  #               phi_l=list("Gamma"))
-
-  param <- list(               # define the required values of the Bliss method.
-                iter=1e3,               # The number of iteration of the main numerical algorithm of Bliss.
-                burnin=2e2,             # The number of burnin iteration for the Gibbs Sampler
-                K=c(3))                 # The number of intervals of the beta
+  param <- list(            # define the required values of the Bliss method.
+                iter=1e3,   # The number of iteration of the main numerical algorithm of Bliss.
+                burnin=2e2, # The number of burnin iteration for the Gibbs Sampler
+                K=c(3))     # The number of intervals of the beta
 
    
   res_bliss<-fit_Bliss(data=data,param=param,verbose=TRUE)
@@ -121,80 +108,58 @@ To avoid execution lengths, this section is not executed. Please, give it a try.
 
 ## Simulate the dataset
 
-```{r ,eval=FALSE, include = TRUE}
+```{r ,eval=TRUE, include = TRUE}
    param <- list(Q=2,
                  n=300,
                  p=c(40,60),
                  beta_shapes=c("simple","smooth"),
                  grids_lim=list(c(0,1),c(0,2)))
 
-  # param <- list(Q=2,n=50,p=c(15,12),beta_types=c("simple","smooth"),
-  #              b_inf=c(0,0),b_sup=c(1,1),
-  #              iter=1e3,burnin=2e2,K=c(3,3),grids=data$grids,
-  #              prior_beta="Ridge_Zellner",phi_l=list("Gamma","Gamma"))
   data <- sim(param)
 ```
 
 ## Apply the Bliss method
-```{r ,eval=FALSE, include = TRUE}
-   param <- list(            # define the required values of the Bliss method.
-     iter=1e3,               # The number of iteration of the main numerical algorithm of Bliss.
-     burnin=2e2,             # The number of burnin iteration for the Gibbs Sampler
-     K=c(3,3))               # The number of intervals of the beta
+```{r ,eval=TRUE, include = TRUE}
+  param <- list(       # define the required values of the Bliss method.
+     iter=1e3,         # The number of iteration of the main numerical algorithm of Bliss.
+     burnin=2e2,       # The number of burnin iteration for the Gibbs Sampler
+     K=c(3,3))         # The number of intervals of the beta
 
   res_Bliss_mult <- fit_Bliss(data=data,param=param)
 ```
 
 ## Plot the result
-```{r ,eval=FALSE, include = TRUE,fig.height=5,fig.width=7}
+```{r ,eval=TRUE, include = TRUE,fig.height=5,fig.width=7}
    q <- 1
-   param$ylim <- range(range(res_bliss$beta_posterior_density[[q]]$grid_beta_t),
+   param$ylim <- range(range(res_Bliss_mult$beta_posterior_density[[q]]$grid_beta_t),
                        c(-5,5))
    param$cols <- rev(heat.colors(100))
-   image_Bliss(res_bliss$beta_posterior_density,param,q=q)
-   lines(res_bliss$data$grids[[q]],res_bliss$Bliss_estimate[[q]],type="s",lwd=2)
-   lines(res_bliss$data$grids[[q]],res_bliss$data$betas[[q]],col=2,lwd=2,type="s")
+   image_Bliss(res_Bliss_mult$beta_posterior_density,param,q=q)
+   lines(res_Bliss_mult$data$grids[[q]],res_Bliss_mult$Bliss_estimate[[q]],type="s",lwd=2)
+   lines(res_Bliss_mult$data$grids[[q]],res_Bliss_mult$data$betas[[q]],col=2,lwd=2,type="s")
 
-  ylim <- range(range(res_bliss$Bliss_estimate[[q]]),
-                 range(res_bliss$Smooth_estimate[[q]]))
-   plot_bliss(res_bliss$data$grids[[q]],
-              res_bliss$Bliss_estimate[[q]],lwd=2,ylim=ylim)
-   lines(res_bliss$data$grids[[q]],
-         res_bliss$Smooth_estimate[[q]],lty=2)
+  ylim <- range(range(res_Bliss_mult$Bliss_estimate[[q]]),
+                 range(res_Bliss_mult$Smooth_estimate[[q]]))
+   plot_bliss(res_Bliss_mult$data$grids[[q]],
+              res_Bliss_mult$Bliss_estimate[[q]],lwd=2,ylim=ylim)
+   lines(res_Bliss_mult$data$grids[[q]],
+         res_Bliss_mult$Smooth_estimate[[q]],lty=2)
 
 
    q <- 2
-   param$ylim <- range(range(res_bliss$beta_posterior_density[[q]]$grid_beta_t),
+   param$ylim <- range(range(res_Bliss_mult$beta_posterior_density[[q]]$grid_beta_t),
                        c(-5,5))
    param$cols <- rev(heat.colors(100))
-   image_Bliss(res_bliss$beta_posterior_density,param,q=q)
-   lines(res_bliss$data$grids[[q]],res_bliss$Bliss_estimate[[q]],type="s",lwd=2)
-   lines(res_bliss$data$grids[[q]],res_bliss$data$betas[[q]],col=2,lwd=2,type="l")
+   image_Bliss(res_Bliss_mult$beta_posterior_density,param,q=q)
+   lines(res_Bliss_mult$data$grids[[q]],res_Bliss_mult$Bliss_estimate[[q]],type="s",lwd=2)
+   lines(res_Bliss_mult$data$grids[[q]],res_Bliss_mult$data$betas[[q]],col=2,lwd=2,type="l")
    
-   ylim <- range(range(res_bliss$Bliss_estimate[[q]]),
-                 range(res_bliss$Smooth_estimate[[q]]))
-   plot_bliss(res_bliss$data$grids[[q]],
-              res_bliss$Bliss_estimate[[q]],lwd=2,ylim=ylim)
-   lines(res_bliss$data$grids[[q]],
-         res_bliss$Smooth_estimate[[q]],lty=2)
-
-
-
-  for(q in 1:Q){
-    ylim <- range(c(res_Bliss_mult$posterior_density_estimate[[q]]$res.kde2d$y,
-                    data$beta[[q]]))
-    ylim <- ylim +  (ylim[2] - ylim[1])/20 * c(-1,1)
-    param$ylim <- ylim
-
-    image_Bliss(res_bliss$beta_posterior_density,param,q=q)
-    # the Bliss estimate
-    lines(res_Bliss_mult$grids[[q]],res_Bliss_mult$Bliss_estimate[[q]],lwd=2,bound=F)
-    # the posterior expection of beta(t)
-    lines(res_Bliss_mult$grids[[q]],res_Bliss_mult$res.Simulated_Annealing[[q]]$posterior_expe,
-                        lty=2,bound=T)
-    # plot the true coefficient function
-    lines(data$grids[[q]],data$beta[[q]],col=3)
-  }
+   ylim <- range(range(res_Bliss_mult$Bliss_estimate[[q]]),
+                 range(res_Bliss_mult$Smooth_estimate[[q]]))
+   plot_bliss(res_Bliss_mult$data$grids[[q]],
+              res_Bliss_mult$Bliss_estimate[[q]],lwd=2,ylim=ylim)
+   lines(res_Bliss_mult$data$grids[[q]],
+         res_Bliss_mult$Smooth_estimate[[q]],lty=2)
 ```
 
 # Session informations
