--- a/vignettes/BlissIntro.Rmd
+++ b/vignettes/BlissIntro.Rmd
@@ -119,11 +119,7 @@ The following chunck shows how to plot the posterior distribution of the
 coefficient function:
 ```{r ,eval=TRUE, include = TRUE,fig.height=5,fig.width=7}
   library(ggplot2)
-  param$ylim <- range(range(res_bliss$beta_posterior_density[[1]]$grid_beta_t),
-                      c(-5,5))
-  image_Bliss(res_bliss$beta_posterior_density,param,q=1) + 
-    lines_bliss(res_bliss$data$grids[[1]],res_bliss$smooth_estimate[[1]])+ 
-    lines_bliss(res_bliss$data$grids[[1]],res_bliss$Bliss_estimate[[1]],col="purple")
+  image_Bliss(res_bliss$beta_posterior_density,param,q=1) 
 ```
 
 Additionnaly to this plot, one could usually want to display a point estimate 
@@ -134,45 +130,14 @@ By using the following code, you can access to:
 function (standard means that it minimizes the posterior $L^2$-loss).
 
 ```{r ,eval=TRUE, include = TRUE,fig.height=5,fig.width=7}
-  param$ylim <- range(range(res_bliss$beta_posterior_density[[1]]$grid_beta_t),
-                      c(-5,5))
-  param$cols <- rev(heat.colors(100))
-  
-  param$ylim <- NULL
-  param$col_low <- "blue"
-  image_Bliss(res_bliss$beta_posterior_density,param,q=1)
-  
-  # Bliss estimate
-  # lines(res_bliss$data$grids[[1]],res_bliss$Bliss_estimate[[1]],type="s",lwd=2) 
-  # 
-  # # Smooth estimate
-  # lines(res_bliss$data$grids[[1]],res_bliss$smooth_estimate[[1]],lty=2)
-  # 
-  # # True coefficient function
-  # lines(res_bliss$data$grids[[1]],res_bliss$data$betas[[1]],col="purple",lwd=2,type="s")
+  image_Bliss(res_bliss$beta_posterior_density,param,q=1) + 
+    lines_bliss(res_bliss$data$grids[[1]],res_bliss$Bliss_estimate[[1]]) + 
+    lines_bliss(res_bliss$data$grids[[1]],res_bliss$smooth_estimate[[1]],lty = "dashed")+ 
+    lines_bliss(res_bliss$data$grids[[1]],data$betas[[1]],col="purple")
 ```
 
 The solid black line is Bliss estimate, the dashed black line is the smooth estimate
 and the solid purple line is the true coefficien function.
-
-Below, the function `lines_bliss` is used to plot the step function without the
-vertical lines, linking differents steps.
-
-```{r ,eval=TRUE, include = TRUE,fig.height=5,fig.width=7}
-  param$ylim <- range(range(res_bliss$beta_posterior_density[[1]]$grid_beta_t),
-                      c(-5,5))
-  param$cols <- rev(heat.colors(100))
-  # image_Bliss(res_bliss$beta_posterior_density,param,q=1)
-  
-  # # Bliss estimate
-  # lines_bliss(res_bliss$data$grids[[1]],res_bliss$Bliss_estimate[[1]],lwd=3) 
-  # 
-  # # Smooth estimate
-  # lines(res_bliss$data$grids[[1]],res_bliss$smooth_estimate[[1]],lty=2)
-  # 
-  # # True coefficient function
-  # lines_bliss(res_bliss$data$grids[[1]],res_bliss$data$betas[[1]],col="purple",lwd=3)
-```
 
 ### Support of coefficient function 
 
@@ -247,42 +212,20 @@ The main differences are that:
      burnin=2e2,       # The number of burnin iteration for the Gibbs Sampler
      K=c(3,3))         # The number of intervals of the beta
 
-  # res_Bliss_mult <- fit_Bliss(data=data,param=param)
+  res_Bliss_mult <- fit_Bliss(data=data,param=param)
 ```
 
 ## Graphical results
 ```{r ,eval=FALSE, include = TRUE,fig.height=5,fig.width=7}
-   q <- 1
-  #  param$ylim <- range(range(res_Bliss_mult$beta_posterior_density[[q]]$grid_beta_t),
-  #                      c(-5,5))
-  #  param$cols <- rev(heat.colors(100))
-  #  image_Bliss(res_Bliss_mult$beta_posterior_density,param,q=q)
-  #  lines(res_Bliss_mult$data$grids[[q]],res_Bliss_mult$Bliss_estimate[[q]],type="s",lwd=2)
-  #  lines(res_Bliss_mult$data$grids[[q]],res_Bliss_mult$data$betas[[q]],col=2,lwd=2,type="s")
-  # 
-  # ylim <- range(range(res_Bliss_mult$Bliss_estimate[[q]]),
-  #                range(res_Bliss_mult$smooth_estimate[[q]]))
-  #  plot_bliss(res_Bliss_mult$data$grids[[q]],
-  #             res_Bliss_mult$Bliss_estimate[[q]],lwd=2,ylim=ylim)
-  #  lines(res_Bliss_mult$data$grids[[q]],
-  #        res_Bliss_mult$smooth_estimate[[q]],lty=2)
-  # 
-  # 
-  #  q <- 2
-  #  param$ylim <- range(range(res_Bliss_mult$beta_posterior_density[[q]]$grid_beta_t),
-  #                      c(-5,5))
-  #  param$cols <- rev(heat.colors(100))
-  #  image_Bliss(res_Bliss_mult$beta_posterior_density,param,q=q)
-  #  lines(res_Bliss_mult$data$grids[[q]],res_Bliss_mult$Bliss_estimate[[q]],type="s",lwd=2)
-  #  lines(res_Bliss_mult$data$grids[[q]],res_Bliss_mult$data$betas[[q]],col=2,lwd=2,type="l")
-  #  
-  #  ylim <- range(range(res_Bliss_mult$Bliss_estimate[[q]]),
-  #                range(res_Bliss_mult$smooth_estimate[[q]]))
-  #  plot_bliss(res_Bliss_mult$data$grids[[q]],
-  #  plot_bliss(res_Bliss_mult$data$grids[[q]],
-  #             res_Bliss_mult$Bliss_estimate[[q]],lwd=2,ylim=ylim)
-  #  lines(res_Bliss_mult$data$grids[[q]],
-  #        res_Bliss_mult$smooth_estimate[[q]],lty=2)
+  image_Bliss(res_Bliss_mult$beta_posterior_density,param,q=1) + 
+    lines_bliss(res_Bliss_mult$data$grids[[1]],res_Bliss_mult$Bliss_estimate[[1]]) + 
+    lines_bliss(res_Bliss_mult$data$grids[[1]],res_Bliss_mult$smooth_estimate[[1]],lty = "dashed")+ 
+    lines_bliss(res_Bliss_mult$data$grids[[1]],data$betas[[1]],col="purple")
+
+  image_Bliss(res_Bliss_mult$beta_posterior_density,param,q=2) + 
+    lines_bliss(res_Bliss_mult$data$grids[[2]],res_Bliss_mult$Bliss_estimate[[2]]) + 
+    lines_bliss(res_Bliss_mult$data$grids[[2]],res_Bliss_mult$smooth_estimate[[2]],lty = "dashed")+ 
+    lines_bliss(res_Bliss_mult$data$grids[[2]],data$betas[[2]],col="purple")
 ```
 
 # Session informations
